fix(lots): paddings/gaps

--- a/styles/content/lots.css
+++ b/styles/content/lots.css
@@ -2,7 +2,7 @@
   padding: 180px 50px 0;
   display: flex;
   flex-direction: column;
-  gap: 28px
+  gap: 26px
   /* letter-spacing: 0; */
 }
 
